[package]
name = "chemistry-tools"
version = "0.1.0"
authors = ["Ryan Jones-Ward <sciguyryan@gmail.com>"]
edition = "2021"
description = "A crate with various chemistry-related tools."
license = "LGPL 2.1"
repository = "https://github.com/sciguyryan/Chemistry-Tools"
homepage = "https://github.com/sciguyryan/Chemistry-Tools"
publish = false
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fraction = "0.11.0"
lazy_static = "1.4.0"
nalgebra = "0.31.0"
rusqlite = { version = "0.28.0", features = ["bundled"] }


[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
lto = true
strip = true
#panic = "abort"
